# Tic-Tac-Toe

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Data/: OperationSystem.h  TrainingData.cpp  TrainingData.h
Model/: Board.cpp  Board.h  Game.cpp  Game.h  Player.cpp  Player.h
NeuralNetwork/: README.md  Theta1.mat  Theta2.mat  Theta3.mat  X.mat  X_all.mat  X_cross.mat  X_test.mat  X_training.mat  data.mat  lambda.mat  learningCurve.m  main.m  nnCostFunction.m  octave-workspace  pData.mat  plotCostByLambda.m  predict.m  predictPos  randInitializeWeights.m  realtimeData.mat  sigmoidGradient.m  trainNN.m  y.mat  y_all.mat  y_cross.mat  y_test.mat  y_training.mat
